# raptor

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  makefile  meson.build  meson_options.txt
doc/: changelog.md
include/: args.h  version.h.in
include/algorithm/: edge_data_base.hpp  edge_item.hpp  graph.hpp  lis_is.hpp  min_queue.hpp  min_stack.hpp  node_data_base.hpp  node_item.hpp  path.hpp
include/aligner/: aligner_base.h  aligner_containers.h  aligner_edlib.h  aligner_factory.h  aligner_ksw2_double.h  aligner_ksw2_single.h  aligner_util.hpp  alignment_options.h  alignment_position.h  alignment_result.h  alignment_type.h  cigar.h  consts.h  difflib_base.h  difflib_edlib.h  global_margins.h  pairwise_penalties.h  sam_parser.h
include/containers/: mapping_env.h  path_alignment.h  range.h  raptor_results.h  sam_tag.h  target_hits.hpp
include/debug_tools/: write_seed_hit_1.h
include/graph/: anchor_graph.h  anchor_graph_edge.h  anchor_graph_node.hpp  local_path.h  segment_edge.h  segment_graph.h  segment_graph_parser.h  segment_graph_parser_enums.h  segment_node.h  split_segment_graph.h
include/graph_aligner/: anchor_graph_aligner.h
include/index/: dense_index.h  index_base.h  index_factory.h  index_params.h  index_types.h  index_util.h  kxsort.h  lookups.h  minimizer.hpp  minimizer_generator.h  minimizer_hit.hpp  minimizer_index.h  minimizer_index_types.h  params_index.h  random_access_sequence_file.h  seed.hpp  seed_hit.hpp  sequence.h  sequence_deserializer.h  sequence_file.h  sequence_file_enums.h  sequence_file_handlers.h
include/lib/: LICENSE-flat_hash_map.txt  argparser.h  edlib.h  thread_pool.hpp
include/log/: log_system.h  log_tools.h
include/params/: params_aligner.h  params_mapper.h  params_raptor.h  params_raptor_index.h
include/raptor/: args_raptor.h  backtrack_list_node.h  dp_chain.h  graph_mapper.h  graph_mapper_tools.h  index_factory.h  interval_tree_builder.h  mapper.h  mapper_tools.h  path_aligner.h  raptor.h  raptor_aligner.h  yield_index.h
include/raptor_fetch/: args_raptor_fetch.h  params_raptor_fetch.h
include/raptor_reshape/: args_raptor_reshape.h  params_raptor_reshape.h
include/raptor_sova/: args_raptor_sova.h  params_raptor_sova.h  params_sova_mapper.h  raptor_sova_worker_queue.h  seed_hit_diag.hpp  ses_distance_banded.h  sova_mapper.h  sova_overlap.h
include/sequences/: random_access_sequence_file.h  sequence_file.h  sequence_file_composite_base.h  sequence_file_composite_factory.h  sequence_file_composite_fofn.h  sequence_file_composite_pbxml.h  sequence_file_enums.h  sequence_file_parser_bam.h  sequence_file_parser_base.h  (+9 more)
scripts/: cram  fastqinvert.py  fastqparser.py  graphsim-eval.py  graphsim.py  mapeval.sh  scatterplot-1.py
src/: args.cc  args_raptor.cc  meson.build
src/aligner/: aligner_edlib.cc  aligner_factory.cc  aligner_ksw2_double.cc  aligner_ksw2_single.cc  aligner_util.cc  alignment_result.cc  anchor_aligner.cc  cigar.cc  difflib_edlib.cc  sam_parser.cc
src/containers/: mapping_env.cc  path_alignment.cc
src/containers/mapping_result/: aligned_mapping_result.cc  graph_mapping_result.cc  linear_mapping_result.cc  mapping_result_common.cc
src/containers/region/: region_aligned.cc  region_mapped.cc
src/debug_tools/: write_seed_hit_1.cc
src/graph/: anchor_graph_edge.cc  local_path.cc  segment_edge.cc  segment_graph.cc  segment_graph_parser.cc  segment_node.cc  split_segment_graph.cc
src/graph_aligner/: anchor_graph_aligner.cc
src/index/: dense_index.cc  deprecated_approaches.md  index_factory.cc  index_params.cc  index_util.cc  minimizer_generator.cc  minimizer_index.cc  minimizer_index_util.cc  random_access_sequence_file.cc  sequence.cc  sequence_deserializer.cc  sequence_file.cc  sequence_serializer.cc
src/lib/: LICENSE-argparser  argparser.cc  edlib.cc  thread_pool.cc
src/log/: log_system.cc  log_tools.cc
src/mains/: main_raptor.cc  main_raptor_index.cc
src/params/: params_aligner.cc  params_mapper.cc  params_raptor.cc  params_raptor_index.cc
src/raptor/: args_raptor.cc  backtrack_list_node.cc  dp_chain.cc  graph_mapper.cc  graph_mapper_tools.cc  index_factory.cc  interval_tree_builder.cc  main_raptor.cc  mapper.cc  mapper_tools.cc  path_aligner.cc  raptor.cc  raptor_aligner.cc  yield_index.cc
src/raptor_fetch/: args_raptor_fetch.cc  main_raptor_fetch.cc  params_raptor_fetch.cc
src/raptor_fetch/overlaps/: overlap.cc  overlap_compact.cc  overlap_file.cc  overlap_filter.cc
src/raptor_index/: main_raptor_index.cc
src/raptor_reshape/: args_raptor_reshape.cc  main_raptor_reshape.cc  params_raptor_reshape.cc
src/raptor_sova/: args_raptor_sova.cc  main_raptor_sova.cc  raptor_sova_worker_queue.cc  ses_distance_banded.cc  sova_mapper.cc
src/sequences/: random_access_sequence_file.cc  sequence.cc  sequence_file.cc  sequence_file_composite_factory.cc  sequence_file_composite_fofn.cc  sequence_file_composite_pbxml.cc  sequence_file_parser_bam.cc  sequence_file_parser_factory.cc  sequence_file_parser_fastx.cc  sequence_file_parser_gfa1.cc  sequence_file_parser_gfa2.cc  sequence_file_parser_pbxml.cc  sequence_file_parser_sam.cc  sequence_file_parser_utils.cc  sequence_file_utils.cc  sequence_serializer.cc
src/utility/: fofn.cc  memtime.cc  stringutil.cc  tictoc.cc
src/writer/: output_formatter.cc  raptor_results_writer.cc  raptor_results_writer_bam.cc  raptor_results_writer_cstream.cc  raptor_results_writer_factory.cc  raptor_results_writer_stream.cc
subprojects/: htslib.wrap  pbbam.wrap  pbcopper.wrap
tests/unit/: meson.build  test_api.cc  test_cigar.cc  test_dense_index.cc  test_graph_aligner.cc  test_graph_mapper.cc  test_graph_mapper.h  test_graph_mapper_tools.cc  test_index_common.cc  test_index_common.h  test_main.cc  test_mapping_results_common.cc  test_minimizer_index.cc  test_random_access_sequence_file.cc  test_range_tools.cc  test_sequence_file_parser_bam.cc  test_sequence_file_parser_fastx.cc  test_sequence_file_parser_gfa1.cc  test_sequence_file_parser_gfa2.cc  test_sequence_file_parser_sam.cc  test_split_segment_graph.cc  test_stringutil.cc
(+193 files in other folders)
