###########
# sources #
###########

tests_cpp_sources = files([
  'test_api.cc',
  'test_graph_mapper.cc',
  'test_graph_aligner.cc',
  'test_graph_mapper_tools.cc',
  'test_minimizer_index.cc',
  'test_range_tools.cc',
  'test_random_access_sequence_file.cc',
  'test_split_segment_graph.cc',
  'test_stringutil.cc',
])

tests_extra_flags = []

tests_include_directories = [include_directories('.')]

